[package]
name = "crypto-protocols"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
glass_pumpkin = "1.0"
hex = "0.4.3"
num-bigint = "0.4"
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8.5"
